crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP037_UP037.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    QuotedAnnotation: ~
  location:
    row: 18
    column: 13
  end_location:
    row: 18
    column: 22
  fix:
    content:
      - MyClass
    location:
      row: 18
      column: 13
    end_location:
      row: 18
      column: 22
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 18
    column: 27
  end_location:
    row: 18
    column: 36
  fix:
    content:
      - MyClass
    location:
      row: 18
      column: 27
    end_location:
      row: 18
      column: 36
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 19
    column: 7
  end_location:
    row: 19
    column: 16
  fix:
    content:
      - MyClass
    location:
      row: 19
      column: 7
    end_location:
      row: 19
      column: 16
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 22
    column: 20
  end_location:
    row: 22
    column: 26
  fix:
    content:
      - bool
    location:
      row: 22
      column: 20
    end_location:
      row: 22
      column: 26
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 26
    column: 15
  end_location:
    row: 26
    column: 20
  fix:
    content:
      - str
    location:
      row: 26
      column: 15
    end_location:
      row: 26
      column: 20
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 26
    column: 32
  end_location:
    row: 26
    column: 37
  fix:
    content:
      - int
    location:
      row: 26
      column: 32
    end_location:
      row: 26
      column: 37
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 30
    column: 9
  end_location:
    row: 30
    column: 18
  fix:
    content:
      - MyClass
    location:
      row: 30
      column: 9
    end_location:
      row: 30
      column: 18
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 32
    column: 13
  end_location:
    row: 32
    column: 22
  fix:
    content:
      - MyClass
    location:
      row: 32
      column: 13
    end_location:
      row: 32
      column: 22
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 36
    column: 7
  end_location:
    row: 36
    column: 16
  fix:
    content:
      - MyClass
    location:
      row: 36
      column: 7
    end_location:
      row: 36
      column: 16
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 40
    column: 26
  end_location:
    row: 40
    column: 31
  fix:
    content:
      - int
    location:
      row: 40
      column: 26
    end_location:
      row: 40
      column: 31
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 44
    column: 30
  end_location:
    row: 44
    column: 35
  fix:
    content:
      - int
    location:
      row: 44
      column: 30
    end_location:
      row: 44
      column: 35
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 47
    column: 13
  end_location:
    row: 47
    column: 18
  fix:
    content:
      - str
    location:
      row: 47
      column: 13
    end_location:
      row: 47
      column: 18
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 49
    column: 7
  end_location:
    row: 49
    column: 12
  fix:
    content:
      - str
    location:
      row: 49
      column: 7
    end_location:
      row: 49
      column: 12
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 51
    column: 14
  end_location:
    row: 51
    column: 19
  fix:
    content:
      - str
    location:
      row: 51
      column: 14
    end_location:
      row: 51
      column: 19
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 53
    column: 12
  end_location:
    row: 53
    column: 17
  fix:
    content:
      - str
    location:
      row: 53
      column: 12
    end_location:
      row: 53
      column: 17
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 55
    column: 19
  end_location:
    row: 55
    column: 24
  fix:
    content:
      - str
    location:
      row: 55
      column: 19
    end_location:
      row: 55
      column: 24
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 57
    column: 19
  end_location:
    row: 57
    column: 24
  fix:
    content:
      - str
    location:
      row: 57
      column: 19
    end_location:
      row: 57
      column: 24
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 59
    column: 10
  end_location:
    row: 59
    column: 15
  fix:
    content:
      - str
    location:
      row: 59
      column: 10
    end_location:
      row: 59
      column: 15
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 61
    column: 18
  end_location:
    row: 61
    column: 27
  fix:
    content:
      - MyClass
    location:
      row: 61
      column: 18
    end_location:
      row: 61
      column: 27
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 63
    column: 28
  end_location:
    row: 63
    column: 33
  fix:
    content:
      - int
    location:
      row: 63
      column: 28
    end_location:
      row: 63
      column: 33
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 63
    column: 44
  end_location:
    row: 63
    column: 49
  fix:
    content:
      - str
    location:
      row: 63
      column: 44
    end_location:
      row: 63
      column: 49
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 65
    column: 28
  end_location:
    row: 65
    column: 33
  fix:
    content:
      - foo
    location:
      row: 65
      column: 28
    end_location:
      row: 65
      column: 33
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 65
    column: 35
  end_location:
    row: 65
    column: 40
  fix:
    content:
      - int
    location:
      row: 65
      column: 35
    end_location:
      row: 65
      column: 40
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 65
    column: 44
  end_location:
    row: 65
    column: 49
  fix:
    content:
      - bar
    location:
      row: 65
      column: 44
    end_location:
      row: 65
      column: 49
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 65
    column: 51
  end_location:
    row: 65
    column: 56
  fix:
    content:
      - str
    location:
      row: 65
      column: 51
    end_location:
      row: 65
      column: 56
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 67
    column: 23
  end_location:
    row: 67
    column: 26
  fix:
    content:
      - X
    location:
      row: 67
      column: 23
    end_location:
      row: 67
      column: 26
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 67
    column: 37
  end_location:
    row: 67
    column: 42
  fix:
    content:
      - foo
    location:
      row: 67
      column: 37
    end_location:
      row: 67
      column: 42
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 67
    column: 44
  end_location:
    row: 67
    column: 49
  fix:
    content:
      - int
    location:
      row: 67
      column: 44
    end_location:
      row: 67
      column: 49
  parent: ~
- kind:
    QuotedAnnotation: ~
  location:
    row: 69
    column: 14
  end_location:
    row: 69
    column: 17
  fix:
    content:
      - X
    location:
      row: 69
      column: 14
    end_location:
      row: 69
      column: 17
  parent: ~

