crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__future_annotations_pep_585_p37.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
future_annotations.py:34:18: UP006 [*] Use `list` instead of `typing.List` for type annotation
   |
34 | def f(x: int) -> List[int]:
   |                  ^^^^ UP006
35 |     y = List[int]()
36 |     y.append(x)
   |
   = help: Replace with `list`

ℹ Suggested fix
31 31 |         return cls(x=0, y=0)
32 32 | 
33 33 | 
34    |-def f(x: int) -> List[int]:
   34 |+def f(x: int) -> list[int]:
35 35 |     y = List[int]()
36 36 |     y.append(x)
37 37 |     return y


