crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__future_annotations_pep_585_py310.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: NonPEP585Annotation
    body: "Use `list` instead of `List` for type annotations"
    suggestion: "Replace `List` with `list`"
    fixable: true
  location:
    row: 34
    column: 17
  end_location:
    row: 34
    column: 21
  fix:
    edits:
      - location:
          row: 34
          column: 17
        end_location:
          row: 34
          column: 21
        content: list
  parent: ~
- kind:
    name: NonPEP585Annotation
    body: "Use `list` instead of `List` for type annotations"
    suggestion: "Replace `List` with `list`"
    fixable: true
  location:
    row: 35
    column: 8
  end_location:
    row: 35
    column: 12
  fix:
    edits:
      - location:
          row: 35
          column: 8
        end_location:
          row: 35
          column: 12
        content: list
  parent: ~
- kind:
    name: NonPEP585Annotation
    body: "Use `list` instead of `List` for type annotations"
    suggestion: "Replace `List` with `list`"
    fixable: true
  location:
    row: 42
    column: 26
  end_location:
    row: 42
    column: 30
  fix:
    edits:
      - location:
          row: 42
          column: 26
        end_location:
          row: 42
          column: 30
        content: list
  parent: ~
- kind:
    name: NonPEP585Annotation
    body: "Use `list` instead of `List` for type annotations"
    suggestion: "Replace `List` with `list`"
    fixable: true
  location:
    row: 42
    column: 37
  end_location:
    row: 42
    column: 41
  fix:
    edits:
      - location:
          row: 42
          column: 37
        end_location:
          row: 42
          column: 41
        content: list
  parent: ~

