crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__future_annotations_pep_604_p37.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: TypingUnion
    body: "Use `X | Y` for type annotations"
    commit: "Convert to `X | Y`"
    fixable: true
  location:
    row: 40
    column: 3
  end_location:
    row: 40
    column: 16
  fix:
    content: int | None
    location:
      row: 40
      column: 3
    end_location:
      row: 40
      column: 16
  parent: ~

