crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__future_annotations_pep_604_py310.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- - kind:
      name: NonPEP604Annotation
      body: "Use `X | Y` for type annotations"
      suggestion: "Convert to `X | Y`"
      fixable: true
    location:
      row: 40
      column: 3
    end_location:
      row: 40
      column: 16
    fix:
      content: int | None
      location:
        row: 40
        column: 3
      end_location:
        row: 40
        column: 16
    parent: ~
  - kind:
      name: NonPEP604Annotation
      body: "Use `X | Y` for type annotations"
      suggestion: "Convert to `X | Y`"
      fixable: true
    location:
      row: 42
      column: 20
    end_location:
      row: 42
      column: 47
    fix:
      content: "List[int] | List[str]"
      location:
        row: 42
        column: 20
      end_location:
        row: 42
        column: 47
    parent: ~

